Disable CLI ingress, is it does not work for remote deployments
The `kubectl testkube config oauth https://testkube.k8s.mabl.se/api --client-id <client ID> --client-secret <clinet secret>` command yields a auth request with redirect URL hard coded to localhost port 13254, ignoring the callback URL used in OAuth2-Proxy:

    https://github.com/login/oauth/authorize?access_type=offline&client_id=616dc849ffff963f7022&redirect_uri=http%3A%2F%2F127.0.0.1%3A13254%2Foauth%2Fcallback&response_type=code&state=wHsjAMtx

--- a/k8s-examples/testkube/testkube-values.yaml
+++ b/k8s-examples/testkube/testkube-values.yaml
@@ -211,7 +211,7 @@ testkube-api:
           - testkube.k8s.mabl.se
         secretName: testkube-cert-secret
   cliIngress:
-    enabled: true
+    enabled: false
     annotations:
       kubernetes.io/ingress.class: nginx
       nginx.ingress.kubernetes.io/rewrite-target: /$1
