--- a/k8s-examples/hello-kubernetes/hello-kubernetes-deployments.yml
+++ b/k8s-examples/hello-kubernetes/hello-kubernetes-deployments.yml
@@ -18,7 +18,7 @@ spec:
           image: paulbouwer/hello-kubernetes:1.10.1
           env:
             - name: MESSAGE
-              value: "Hello world, @mb-eks-cluster path!"
+              value: "Hello world, @v1517 path!"
             - name: RENDER_PATH_PREFIX
               value: /hello-kubernetes/
             - name: HANDLER_PATH_PREFIX
@@ -46,6 +46,6 @@ spec:
           image: paulbouwer/hello-kubernetes:1.10.1
           env:
             - name: MESSAGE
-              value: "Hello world, @mb-eks-cluster subdomain!"
+              value: "Hello world, @v1517 subdomain!"
           ports:
             - containerPort: 8080
