--- a/k8s-examples/hello-kubernetes/hello-kubernetes-ingress.yml
+++ b/k8s-examples/hello-kubernetes/hello-kubernetes-ingress.yml
@@ -4,8 +4,8 @@ metadata:
   name: hello-kubernetes
   namespace: default
   annotations:
-    kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: letsencrypt-production
+    kubernetes.io/ingress.class: public
+    cert-manager.io/cluster-issuer: letsencrypt
 #    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   tls:
